--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -1,47 +1,37 @@
 .main {
     gap:20px;
     margin-left:var(--width-sidebar);
-    
     height:100%;
+    background-color:#fff;
 }
 
 .dashboard-content-container {
     display:grid;
     grid-template-columns: 2fr 1fr;
+    gap:10%;
 }
 
-.dashboard-content {
+.dashboard-section {
     display:flex;
     flex-direction:column;
-    gap:30px;
-}
-
-.dashboard-profile-aside {
+    gap:5%;
     height: 100%;
+    width:100%;
+}
+
+.dashboard-section-content {
     display:flex;
     flex-direction:column;
-}
-
-
-.dashboard-profile-aside p {
-    font-weight: 600;
-    display:flex;
-    flex-direction:row;
-    gap:10px;
-    font-size:18px;
-}
-
-.main h1 {
-    font-size:32px;
-}
-
-.main h2 {
-    font-size:20px;
+    gap:10%;
+    max-width:100%;
+    min-width:fit-content;
+    height:100%;
 }
 
 .main .gallery {
     display:flex;
-    flex-direction:row;
-    gap:10px;
+    flex-direction:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    gap:2%;
 }
 
