--- a/app/dashboard/forum/forum.module.css
+++ b/app/dashboard/forum/forum.module.css
@@ -2,3 +2,11 @@
     gap:20px;
     margin-left:var(--width-sidebar);
 }
+
+.main h1 {
+    font-size:32px;
+}
+
+.main h2 {
+    font-size:20px;
+}
