--- a/app/library.css
+++ b/app/library.css
@@ -12,10 +12,11 @@
   --background-gradient: radial-gradient(#fceeee, #fff 50%);
   --color-1: rgb(252, 252, 252); 
   --color-2: #3981F6;
-  --color-light-grey:rgb(247, 247, 247);
-  --color-grey: rgb(220, 220, 220);
+  --color-light-grey:rgb(250, 250, 250);
+  --color-grey: rgb(237, 237, 237);
   --color-dark-grey:rgb(84, 83, 83);
   --color-navy: #03121e;
+  --color-fuschia: ;
 
   /*PADDING & MARGIN*/
   --padding-1: 16vh 8vw;
@@ -35,8 +36,8 @@
 /* LAPTOPS/DESKTOPS */
 @media only screen and (min-width: 1025px) {
   /* CSS rules for large screens */
-  h1 {font-size:60px}
-  h2 {font-size:44px}
+  h1 {font-size:52px}
+  h2 {font-size:20px}
   h3 {font-size:30px}
   h4 {font-size:36px}
   h5 {font-size:28px}
@@ -46,8 +47,8 @@
 /* TABLETS */
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
   /* CSS rules for medium screens */
-  h1 {font-size:60px}
-  h2 {font-size:44px}
+  h1 {font-size:48px}
+  h2 {font-size:22px}
   h3 {font-size:40px}
   h4 {font-size:36px}
   h5 {font-size:28px}
@@ -57,7 +58,7 @@
 /* MOBILE PHONES */
 @media only screen and (max-width: 600px) {
   /* CSS rules for small screens */
-  h1 {font-size:44px;}
+  h1 {font-size:46px;}
   h2 {font-size:40px}
   h3 {font-size:36px}
   h4 {font-size:32px}
@@ -99,20 +100,11 @@ main {
   height:100vh;
 }
 
-section {
-  gap: 20px;
-  max-height:100%;
-  min-height:fit-content;
-  display:flex;
-  flex-direction:column;
-  position: relative;
-}
-
 
 h1,h2,h3,h4,h5,h6 {
   font-weight:600;
   line-height: 1;
-  margin-bottom: 8px;
+  margin-bottom: 2%;
   gap: 10px;
 }
 
@@ -157,3 +149,6 @@ a {
   height:auto;
 }
 
+.text-important {
+  color: #D16EDE;
+}
