--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,7 @@
 
   /* Padding */
   --p-base: 8vh 6vw;
+  
 
   /* Width */
   --w-sidebar: calc(100vw * 1/7);
@@ -80,6 +81,7 @@
     --fs--h4: calc(3.75rem * .8);
     --fs--h5: calc(2.25rem * .8);
     --fs--h6: calc(1.75rem * .8);
+    --w-sidebar: 50px;
   }
 }
 
@@ -97,6 +99,8 @@ body {
   font-size: 1.125rem;
   line-height:1.5;
 }
+
+
 
 main {
   width: min(120ch, 100% - 4rem);
