Frontend mobile fixes

--- a/components/DashNavbar.module.css
+++ b/components/DashNavbar.module.css
@@ -19,4 +19,10 @@
         transition: left 0.3s ease;
     }
 
+    .sidebar--mobile li a {
+        display:flex;
+        flex-direction:row;
+        gap:2px;
+    }
+
 }
