--- a/components/AuthForm.module.css
+++ b/components/AuthForm.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   height: fit-content;
   width: 400px;
   display: flex;
@@ -38,4 +38,4 @@
 
 .form input:focus {
   outline: none;
-}
+} */
