--- a/components/NavbarStyles.scss
+++ b/components/NavbarStyles.scss
@@ -1,7 +1,7 @@
-$sidebar-bg-color: #fff9f9;
+$sidebar-bg-color: #ffffff;
 $submenu-bg-color: rgba(255, 255, 255, 0.05);
 $submenu-bg-color-collapsed: rgba(29, 29, 29, 0.95);
-$sidebar-color: #adadad;
+$sidebar-color: #ffffff;
 $highlight-color: #d8d8d8;
 $icon-bg-color: rgba(252, 252, 252, 0.05);
 $icon-size: 35px;
