--- a/components/Tag.module.css
+++ b/components/Tag.module.css
@@ -26,6 +26,7 @@
   background-color: rgb(248, 248, 248);
   color: var(--clr-grey-500);
   border: 1px solid var(--clr-grey-300);
+  overflow-wrap: break-word;
 }
 
 .orange {
