--- a/app/(external)/discover/discover.module.css
+++ b/app/(external)/discover/discover.module.css
@@ -1,8 +1,13 @@
+
 .visible {
-    display: block;
-  }
+    /* display: block; */
+    opacity: 1;
+    /* visibility: visible; */
+}
   
-  .hidden {
-    display: none;
-  }
+.hidden {
+  /* display: none; */
+  opacity: 0;
+  /* visibility: hidden; */
+}
   
