--- a/components/Tag.module.css
+++ b/components/Tag.module.css
@@ -24,7 +24,7 @@
   cursor: pointer;
   border-radius: 8px;
   background-color: rgb(248, 248, 248);
-  color: var(--clr-grey-500);
+  color: black;
   border: 1px solid var(--clr-grey-300);
   overflow-wrap: break-word;
 }
